# ABC-Chatter-Bot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  app.yaml  app.yml  docker-compose.yml
.github/workflows/: build.yml  pipeline.yml  pull-request-build.yml
src/: main.rs
src/commands/: chug.rs  clear_threads.rs  help.rs  image.rs  join.rs  leave.rs  mention.rs  mod.rs  random_react.rs  reply_thread.rs  voice.rs  voices.rs
src/data/: database_connection.rs  mod.rs
src/data/migrations/: m20230317_000001_create_activethread_table.rs  mod.rs
src/effects/: clear_threads.rs  leave_empty_channel.rs  mention.rs  mod.rs  random_react.rs
src/errors/: mod.rs  network_error.rs
src/models/: active_threads.rs  mod.rs  network_client.rs  network_clients.rs  user.rs
src/network/: mod.rs
src/network/eleven_labs/: eleven_labs_models.rs  eleven_labs_network_driver.rs  mod.rs
src/network/games/: igdb_models.rs  igdb_network_driver.rs  mod.rs
src/network/models/: mod.rs  network_models.rs
src/network/open_ai/: mod.rs  open_ai_models.rs  open_ai_network_driver.rs
src/network/stable_diffusion/: mod.rs  stable_diffusion_models.rs  stable_diffusion_network_driver.rs
src/services/: ai_chat_service.rs  emoji_service.rs  game_data_service.rs  image_gen_service.rs  mod.rs  speech_generation_service.rs  voice_gen_service.rs
src/utils/: mod.rs  number_utils.rs  voice_utils.rs
