[package]
name = "abc_chatter_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serenity = { version = "0.11",  default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "builder"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.156", features = ["derive"] }
