[package]
name = "abc_chatter_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serenity = { version = "0.11",  default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "builder"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.24"
log = "0.4"
fern = "0.6"